--- a/examples/ble_configuration_sample/build.gradle
+++ b/examples/ble_configuration_sample/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.digi.xbee.sample.android.bleconfiguration"
-        minSdkVersion 22
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,6 +22,10 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_15
+        targetCompatibility JavaVersion.VERSION_15
+    }
 }
 
 dependencies {
@@ -32,4 +36,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.firebase:firebase-firestore:24.8.1'
+    implementation 'com.firebase:geofire-android-common:3.1.0'
 }
