--- a/xbee_android_library/build.gradle
+++ b/xbee_android_library/build.gradle
@@ -37,6 +37,10 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_15
+        targetCompatibility JavaVersion.VERSION_15
+    }
 }
 
 dependencies {
