--- a/examples/ble_configuration_sample/build.gradle
+++ b/examples/ble_configuration_sample/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         applicationId "com.digi.xbee.sample.android.bleconfiguration"
         minSdkVersion 24
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,6 +23,10 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -35,3 +40,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.8.1'
     implementation 'com.firebase:geofire-android-common:3.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
